#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT(Biwoo, 1.0.4, akee.yang@gmail.com)
AM_INIT_AUTOMAKE(Biwoo, 1.0.4)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)


# Checks for header files.
AC_CHECK_HEADERS( \
	locale.h \
	string.h \
	sys/timeb.h
)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
#AC_TYPE_SSIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([ftime inet_ntoa memset setlocale socket strstr strtoul])


AC_OUTPUT( \
	Makefile \
	biwoo/Makefile \
	StreamModule/Makefile \
	ThirdParty/Makefile \
	ThirdParty/libCoder/Makefile \
	ThirdParty/libG729a/Makefile \
	ThirdParty/libSIP/Makefile
)
